--- a/package.json
+++ b/package.json
@@ -8,28 +8,29 @@
     "start": "next start",
     "types:check": "fumadocs-mdx && next typegen && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
-    "lint": "eslint"
+    "lint": "eslint",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "fumadocs-core": "16.2.5",
     "fumadocs-mdx": "14.1.0",
     "fumadocs-ui": "16.2.5",
-    "lucide-react": "^0.556.0",
     "next": "16.0.10",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "zod": "^4.1.13"
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "zod": "4.1.13"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/mdx": "^2.0.13",
-    "@types/node": "^24.10.2",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "eslint": "^9.39.2",
+    "@tailwindcss/postcss": "4.1.17",
+    "@types/mdx": "2.0.13",
+    "@types/node": "24.10.2",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "eslint": "9.39.2",
     "eslint-config-next": "16.0.10",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3"
+    "postcss": "8.5.6",
+    "prettier": "3.3.3",
+    "tailwindcss": "4.1.17",
+    "typescript": "5.9.3"
   }
 }
