--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "tailwind-merge": "^3.4.0",
+    "tailwind-scrollbar": "^4.0.2",
     "zod": "4.1.13"
   },
   "devDependencies": {
