--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "all",
   "printWidth": 80,
   "plugins": [
     "@trivago/prettier-plugin-sort-imports",
