--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sebald.me",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@10.13.1",
   "scripts": {
     "build": "next build",
     "dev": "next dev",
