--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fumadocs-core": "16.2.5",
     "fumadocs-mdx": "14.1.0",
     "fumadocs-ui": "16.2.5",
-    "hugeicons-react": "0.3.0",
+    "@phosphor-icons/react": "2.1.10",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
