chore: dependency dashboard for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
   "extends": [
     "config:recommended",
     ":semanticCommitTypeAll(chore)",
-    ":rebaseStalePrs"
+    ":rebaseStalePrs",
+    ":dependencyDashboard"
   ],
   "schedule": ["before 4am on Monday"],
   "timezone": "Europe/Berlin",
