--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@next/third-parties": "16.0.10",
     "cookies-next": "6.1.1",
     "cva": "1.0.0-beta.4",
-    "feed": "^5.1.0",
+    "feed": "5.1.0",
     "fumadocs-core": "16.2.5",
     "fumadocs-mdx": "14.1.0",
     "fumadocs-ui": "16.2.5",
