--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "lint": "eslint",
     "format": "prettier --write .",
     "test": "pnpm test:lib",
-    "test:lib": "node --import tsx --test 'src/**/*.test.ts'",
-    "test:lib:watch": "node --import tsx --test --watch 'src/**/*.test.ts'"
+    "test:lib": "node --import tsx --test src/**/*.test.ts",
+    "test:lib:watch": "node --import tsx --test --watch src/**/*.test.ts"
   }
 }
