--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "shiki": "3.20.0",
     "tailwind-merge": "3.4.0",
     "tailwind-scrollbar": "4.0.2",
     "zod": "4.1.13"
