--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@base-ui/react": "1.0.0",
     "@next/third-parties": "16.0.10",
     "@phosphor-icons/react": "2.1.10",
+    "@react-hook/resize-observer": "2.0.2",
     "cookies-next": "6.1.1",
     "cva": "1.0.0-beta.4",
     "feed": "5.1.0",
