--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookies-next": "6.1.1",
     "cva": "1.0.0-beta.4",
     "feed": "5.1.0",
+    "focus-trap-react": "11.0.4",
     "fumadocs-core": "16.2.5",
     "fumadocs-mdx": "14.1.0",
     "fumadocs-ui": "16.2.5",
