--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "format": "prettier --write .",
     "test": "pnpm test:lib",
     "test:lib": "node --import tsx --test src/**/*.test.ts",
-    "test:lib:watch": "node --import tsx --test --watch src/**/*.test.ts"
+    "test:lib:watch": "node --import tsx --test --watch src/**/*.test.ts",
+    "typecheck": "tsc --noEmit"
   }
 }
